--- a/Nhom4_Kempinki/src/views/layouts/master.pug
+++ b/Nhom4_Kempinki/src/views/layouts/master.pug
@@ -1,7 +1,7 @@
 //- Master layout
 
 doctype html
-html(lang='en')
+html(lang='jp')
   head
 
     //- Meta
@@ -37,6 +37,9 @@ html(lang='en')
     //- Favicons
     link(rel='shortcut icon', href=require('images/favicons/favicon.ico'))
 
+    //- Fonts
+    //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
+
 
 
     //- Title
@@ -49,10 +52,7 @@ html(lang='en')
 
     //- block content
     block content
-<<<<<<< HEAD
 
-=======
->>>>>>> e8153545b07f7c88a34cd10a7b87a20a6bdaeef7
     
     include ../components/footer/footer.pug
     //- block scripts
