--- a/Nhom4_Kempinki/src/views/pages/homepage.pug
+++ b/Nhom4_Kempinki/src/views/pages/homepage.pug
@@ -1,7 +1,7 @@
 extends ../layouts/master.pug
 
 block title
-  title Page - Specialoffers
+  title My Page - home
 
 block basicSeo
   meta(name='description' content='home page')
@@ -9,4 +9,6 @@ block basicSeo
   meta(name='author' content='')
 
 block content
-    include ../components/specialoffers/specialoffers/specialoffers.pug
+
+  //- Desktop page
+  section.page.home__page
