--- a/renovation/src/views/components/footer/footer.pug
+++ b/renovation/src/views/components/footer/footer.pug
@@ -41,3 +41,4 @@ footer
                                     a(href="#")
                                 li.social_icon_pinterest
                                     a(href="#")
+    <a href="#" id="back_to_top"></a>
