--- a/renovation/src/views/components/header/header.pug
+++ b/renovation/src/views/components/header/header.pug
@@ -26,10 +26,10 @@ header
                                             li
                                                 a(href="#")
                                                     span.icon_checkout Checkout
-                                li
-                                    a(href="testimonials")
+                                li.menu_right_lv1__services
+                                    a(href="services")
                                         span services
-                                li
+                                li.menu_right_lv1__portfolio
                                     a(href="portfolio")
                                         span portfolio
             .wrap_grid_menu_right.end-lg
