--- a/renovation/src/views/components/home/home.pug
+++ b/renovation/src/views/components/home/home.pug
@@ -8,10 +8,128 @@
                     span RIGHT THE FIRST TIME! 
             .wrap_link
                 .link_content 
-                    a(href="") View Portfolio
+                    a(href="portfolio") View Portfolio
     .slider_fade
         .slider_img
             img(src="../../../assets/images/slide-main-3.jpg", alt="slide 2")
+        .wrap_des
+            .wrap_slogan_slider
+                .slogan_slider WE CAN HELP WITH PROJECTS 
+                    span LARGE AND SMALL!
+            .wrap_link
+                .link_content 
+                    a(href="#") Contact us
     .slider_fade
         .slider_img
             img(src="../../../assets/images/photodune-2079559-interior-of-modern-house-kitchen-m.jpg", alt="slide 3")
+        .wrap_des
+            .wrap_slogan_slider
+                .slogan_slider NO PROJECT IS TOO LARGE 
+                    span FOR US TO MANAGE! 
+            .wrap_link
+                .link_content 
+                    a(href="portfolio") View Portfolio
+.sesion_our_service
+    .wrap_service
+        .container
+            .block_title_
+                .title_ OUR SERVICES
+                .slogan_ YEARS OF EXPERIENCE
+            .row.grid_services_area
+                .col-lg-4.col-sm-4.col-12
+                    .services_item
+                        .services_img
+                            img.img-fluid(src='../../../assets/images/construction-icon.png' alt='service image')
+                        .services_title 
+                            h2 Contruction
+                        .services_text
+                            p Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.
+                .col-lg-4.col-sm-4.col-12
+                    .services_item
+                        .services_img
+                            img.img-fluid(src='../../../assets/images/roofing-icon.png' alt='service image')
+                        .services_title 
+                            h2 Roofing
+                        .services_text
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+                        
+                .col-lg-4.col-sm-4.col-12
+                    .services_item
+                        .services_img
+                            img.img-fluid(src='../../../assets/images/remodeling-icon.png' alt='service image')
+                        .services_title 
+                            h2 Remodeling
+                        .services_text
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+                        
+.session_featured_work
+    .wrap_featured
+        .container
+            .block_title_
+                .title_.title__feature feature work
+                .slogan_.slogan__feature We take pride in our work
+            .wrap_portfolio_item
+                .row.grid_portfolio_area
+                    .col-lg-4.col-sm-6.col-12
+                        .portfolio_item
+                            a.lightbox(href='../../../assets/images/Smith-residence.jpg')(data-lightbox="example-set")
+                            .portfolio_img
+                                a.light
+                                    img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
+                            .portfolio_text
+                                a
+                                    h4 Smith Residence
+                                    .view View Project
+                    .col-lg-4.col-sm-6.col-12
+                        .portfolio_item
+                            a.lightbox(href='../../../assets/images/portfolio-4.jpg')(data-lightbox="example-set")
+                            .portfolio_img
+                                a.light
+                                    img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
+                            .portfolio_text
+                                a
+                                    h4 Smith Residence
+                                    .view View Project
+                    .col-lg-4.col-sm-6.col-12
+                        .portfolio_item
+                            a.lightbox(href='../../../assets/images/portfolio-7.jpg')(data-lightbox="example-set")
+                            .portfolio_img
+                                a.light
+                                    img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
+                            .portfolio_text
+                                a
+                                    h4 Smith Residence
+                                    .view View Project
+            br
+            p.btn_view_portfolio
+                a(href="portfolio") 
+                    span View portfolio
+.session_testionials
+    .wrap_testionials
+        .block_title_
+            .title_ WHAT OUR CLIENTS ARE SAYING
+            .slogan_ DON'T JUST TAKE OUR WORD
+        .container.overHidden
+            .row.column_item_testimonial
+                .col-sm-6.col-md-6.col-lg-6
+                    .wrap_testimonials_item
+                        .testimonials_item
+                            .wrap_img_user
+                                .img_user
+                                    img(src="https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/uploads/2014/09/sample-testimonial.jpg" alt="Image User")
+                            .wrap_description
+                                .user_name.center Jane Doe 
+                                .user_position.center Home Owner 
+                                .conetent_testimonial
+                                    p Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. 
+                .col-sm-6.col-md-6.col-lg-6
+                    .wrap_testimonials_item
+                        .testimonials_item
+                            .wrap_img_user
+                                .img_user
+                                    img(src="https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/uploads/2014/09/sample-testimonial2.jpg" alt="Image User")
+                            .wrap_description
+                                .user_name.center John Doe 
+                                .user_position.center Business Owner 
+                                .conetent_testimonial
+                                    p Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. 
