--- a/renovation/src/views/components/services/services.pug
+++ b/renovation/src/views/components/services/services.pug
@@ -1,10 +1,16 @@
+.banner
+  .container_banner
+      .wrap-title
+          .title services
+          br
+          .content WE ARE A TEAM OF HIGHLY SKILLED PROFESSIONALS
 section.services_area
     .container-fluid
         .row.grid_services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
                     .services_img
-                        img.img-fluid(src='../../../assets/images/construction-icon.png' alt='')
+                        img.img-fluid(src='../../../assets/images/construction-icon.png' alt='service image')
                     .services_title 
                         h2 Contruction
                     .services_text
@@ -14,7 +20,7 @@ section.services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
                     .services_img
-                        img.img-fluid(src='../../../assets/images/roofing-icon.png' alt='')
+                        img.img-fluid(src='../../../assets/images/roofing-icon.png' alt='service image')
                     .services_title 
                         h2 Roofing
                     .services_text
@@ -24,7 +30,7 @@ section.services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
                     .services_img
-                        img.img-fluid(src='../../../assets/images/remodeling-icon.png' alt='')
+                        img.img-fluid(src='../../../assets/images/remodeling-icon.png' alt='service image')
                     .services_title 
                         h2 Remodeling
                     .services_text
@@ -34,7 +40,7 @@ section.services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
                     .services_img
-                        img.img-fluid(src='../../../assets/images/solar-installation-icon.png' alt='')
+                        img.img-fluid(src='../../../assets/images/solar-installation-icon.png' alt='service image')
                     .services_title 
                         h2 Solar Installation
                     .services_text
@@ -44,7 +50,7 @@ section.services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
                     .services_img
-                        img.img-fluid(src='../../../assets/images/plumbing-icon.png' alt='')
+                        img.img-fluid(src='../../../assets/images/plumbing-icon.png' alt='service image')
                     .services_title 
                         h2 Plumbing
                     .services_text
@@ -54,7 +60,7 @@ section.services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
                     .services_img
-                        img.img-fluid(src='../../../assets/images/electrocial-icon.png' alt='')
+                        img.img-fluid(src='../../../assets/images/electrocial-icon.png' alt='service image')
                     .services_title 
                         h2 Electrical
                     .services_text
