--- a/renovation/src/views/components/services/services.scss
+++ b/renovation/src/views/components/services/services.scss
@@ -1,6 +1,58 @@
+.banner {
+    background-image: url("https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/uploads/2018/09/page-title.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    .container_banner {
+        padding: 0 30px;
+        .wrap-title {
+            padding-top: 120px;
+            padding-bottom: 105px;
+            display: block;
+            @include min-md {
+                padding-top: 150px;
+                padding-bottom: 135px;
+            }
+            .title,
+            .content {
+                font-weight: 300;
+                text-transform: uppercase;
+                margin: 4px 0;
+                line-height: 1;
+            }
+            .title {
+                font-size: 40px;
+                color: #ffffff;
+                @include min-sm {
+                    font-size: 70px;
+                    margin: 8px 0;
+                }
+                @include min-md {
+                    font-size: 90px;
+                    margin: 10px 0;
+                }
+            }
+            .content {
+                font-size: 16px;
+                color: rgba(255, 255, 255, 0.85);
+                font-weight: $fontweight-regular;
+                @include min-sm {
+                    font-size: 20px;
+                    margin: 8px 0;
+                }
+                @include min-md {
+                    font-size: 22px;
+                    margin: 10px 0;
+                }
+            }
+        }
+    }
+}
 .services_area {
     width: 100%;
     color: #3f3f3f;
+    margin: 65px 0;
+    font-family: fonts(pTSansNarrow);
 }
 
 .grid_services_area {
@@ -12,18 +64,26 @@
     // border-bottom: 2px solid #ebebeb;
     .services_img {
         text-align: center;
+        padding-bottom: 20px;
         img {
             height: auto;
             max-width: 100%;
         }
     }
-    .services_title {
+    .services_title h2{
         text-align: center;
-        margin-bottom: 25px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+        font-weight: $fontweight-light;
+        font-family: fonts(main);
+        font-size: 20px;
+        color: #757575;
+        
     }
     .services_text p {
         color: #757575;
         margin-bottom: 26px;
+        font-family: fonts(main);
     }
     .services_divider {
         padding-top: 15px;
