--- a/renovation/src/views/components/testimonials/testimonials.scss
+++ b/renovation/src/views/components/testimonials/testimonials.scss
@@ -118,3 +118,61 @@
     }
   }
 }
+.container {
+  width: 94%;
+  margin: 0 auto;
+  padding: 60px 0;
+
+  .wrap_testimonials_item {
+    background-color: #fff;
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.07);
+    margin: 50px 0;
+
+    .testimonials_item {
+      padding: 0 25px 20px 25px;
+      @include desktop {
+        padding: 0 35px 20px 35px;
+      }
+      .wrap_img_user {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        padding-bottom: 6px;
+
+        .img_user {
+          width: 67px;
+          margin-top: -30px;
+          img {
+            max-width: 100%;
+            border-radius: 50%;
+          }
+        }
+      }
+      .wrap_description {
+        padding: 10px;
+
+        .user_name {
+          font-size: 25px;
+          font-weight: $fontweight-light;
+          color: hsl(0, 0%, 25%);
+          line-height: 25px;
+        }
+        .user_position {
+          color: hsla(0, 0%, 0%, 0.44);
+          padding: 10px;
+          font-size: 16px;
+          font-weight: $fontweight-light;
+        }
+        .conetent_testimonial {
+          padding: 30px 0;
+          p {
+            font-size: 15px;
+            line-height: 25.5px;
+            color: hsla(0, 0%, 0%, 0.5);
+            font-style: italic;
+          }
+        }
+      }
+    }
+  }
+}
