--- a/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.pug
+++ b/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.pug
@@ -21,19 +21,60 @@
                         a Middle East
     .olapic-main
         .container
-            .show-image1
-                a(href="#")
-                    img(src="https://z2photorankmedia-a.akamaihd.net/media/2/x/7/2x7dpc4/normal.jpg", alt="")
-            .show-image2
-                .show-image3
+            .image-gallery
+                .gallery-item.gallery-item1
                     a(href="#")
+                        .title
+                            span @abudhabi_insider
+                        img(src="https://z2photorankmedia-a.akamaihd.net/media/2/x/7/2x7dpc4/normal.jpg", alt="")
+                .gallery-item.gallery-item2
+                    a(href="#")
+                        .title
+                            span @Kempinski
                         img(src="https://z2photorankmedia-a.akamaihd.net/media/u/f/k/ufkpjc4/normal.jpg", alt="")
-                .show-image3
+                .gallery-item.gallery-item3
                     a(href="#")
+                        .title
+                            span @hotelbaltschug
                         img(src="https://z1photorankmedia-a.akamaihd.net/media/w/c/q/wcqc2d4/normal.jpg", alt="")
-                .show-image3
+                .gallery-item.gallery-item4
                     a(href="#")
+                        .title
+                            span @kempinski_munich
                         img(src="https://z3photorankmedia-a.akamaihd.net/media/m/o/3/mo3ro74/normal.jpg", alt="")
-                .show-image3
-                     a(href="#")
+                .gallery-item.gallery-item5
+                    a(href="#")
+                        .title
+                            span @kempinskivilnius
                         img(src="https://z3photorankmedia-a.akamaihd.net/media/h/4/n/h4ndvf4/normal.jpg", alt="")
+                .gallery-item.gallery-item6
+                    a(href="#")
+                        .title
+                            span @kempinskivilnius
+                        img(src="https://z3photorankmedia-a.akamaihd.net/media/h/4/n/h4ndvf4/normal.jpg", alt="")
+                .gallery-item.gallery-item7
+                    a(href="#")
+                        .title
+                            span @kempinskivilnius
+                        img(src="https://z2photorankmedia-a.akamaihd.net/media/j/z/c/jzcoqc4/normal.jpg", alt="")
+                .gallery-item.gallery-item8
+                    a(href="#")
+                        .title
+                            span @kempinskivilnius
+                        img(src="https://z3photorankmedia-a.akamaihd.net/media/7/s/w/7swsvc4/normal.jpg", alt="")
+                .gallery-item.gallery-item9
+                    a(href="#")
+                        .title
+                            span @kempinskivilnius
+                        img(src="https://z3photorankmedia-a.akamaihd.net/media/i/6/5/i65ap94/normal.jpg", alt="")
+                .gallery-item.gallery-item10
+                    a(href="#")
+                        .title
+                            span @kempinskivilnius
+                        img(src="https://photorankmedia-a.akamaihd.net/media/e/e/g/eegcjc4/normal.jpg", alt="")
+            .copyright
+                a(href="#") Powered by Olapic
+        .olapic-loadmore
+            a(href="#") Load more
+                
+                
