--- a/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.scss
+++ b/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.scss
@@ -24,7 +24,7 @@
       }
     }
     .olapic-select {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       @include mobile {
         margin-top: 30px;
         margin-bottom: 40px;
@@ -61,11 +61,11 @@
                 color: white;
               }
             }
-            &:hover{
-              a{
-                color: white
+            &:hover {
+              a {
+                color: white;
               }
-              a:before{
+              a:before {
                 color: white;
               }
             }
@@ -74,7 +74,7 @@
         .olapic-desktop {
           display: flex;
           justify-content: center;
-          @include min-sm{
+          @include min-sm {
             display: flex !important;
           }
           @include mobile {
@@ -172,9 +172,8 @@
   }
   .olapic-main {
     .container {
-      display: flex;
       width: 1200px;
-      margin: auto;
+      margin: 1rem auto;
       @include max-xl {
         width: 100%;
       }
@@ -184,52 +183,124 @@
       @include mobile {
         width: 100%;
       }
-      .show-image1 {
-        // padding-top: 3px;
-        width: 49%;
-        display: flex;
-        flex-wrap: wrap;
-        // margin-right: 5px;
-       > a {
+      .image-gallery {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(12, 0.2fr);
+        grid-gap: 1rem;
+        .gallery-item {
           position: relative;
-          display: block;
-          padding-top: 98%;
-          width: 100%;
-          height: 0;
           img {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
-          }
-        }
-      }
-      .show-image2 {
-        width: 50%;
-        display: flex;
-        flex-wrap: wrap;
-        .show-image3 {
-          width: 49%;
-          padding-left: 10px;
-          margin-bottom: 10px;
-          // padding: 5px;
-          a {
-            // width: 50%;
-            position: relative;
+            object-fit: cover;
             display: block;
-            padding-top: 100%;
+          }
+          .title {
             width: 100%;
-            height: 0;
-            img {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
+            height: 100%;
+            position: absolute;
+            top: -10px;
+            left: 0;
+            display: flex;
+            text-align: center;
+            &:hover {
+              display: block;
+              background: rgba(0, 0, 0, 0.3);
+              span {
+                display: block;
+              }
+            }
+            span {
+              display: none;
+              font-size: 1em;
+              font-family: Arial, Helvetica, sans-serif;
+              color: white;
+              text-transform: lowercase;
+              letter-spacing: 1px;
+              margin-top: 45%;
             }
           }
         }
+        .gallery-item1 {
+          grid-column-start: 1;
+          grid-column-end: 7;
+          grid-row-start: 1;
+          grid-row-end: 7;
+        }
+        .gallery-item2 {
+          grid-column-start: 7;
+          grid-column-end: 10;
+          grid-row-start: 1;
+          grid-row-end: 4;
+        }
+        .gallery-item3 {
+          grid-column-start: 10;
+          grid-column-end: 13;
+          grid-row-start: 1;
+          grid-row-end: 4;
+        }
+        .gallery-item4 {
+          grid-column-start: 7;
+          grid-column-end: 10;
+          grid-row-start: 4;
+          grid-row-end: 7;
+        }
+        .gallery-item5 {
+          grid-column-start: 10;
+          grid-column-end: 13;
+          grid-row-start: 4;
+          grid-row-end: 7;
+        }
+        .gallery-item6 {
+          grid-column-start: 1;
+          grid-column-end: 4;
+          grid-row-start: 7;
+          grid-row-end: 10;
+        }
+        .gallery-item7 {
+          grid-column-start: 4;
+          grid-column-end: 7;
+          grid-row-start: 7;
+          grid-row-end: 10;
+        }
+        .gallery-item8 {
+          grid-column-start: 1;
+          grid-column-end: 4;
+          grid-row-start: 10;
+          grid-row-end: 13;
+        }
+        .gallery-item9 {
+          grid-column-start: 4;
+          grid-column-end: 7;
+          grid-row-start: 10;
+          grid-row-end: 13;
+        }
+        .gallery-item10 {
+          grid-column-start: 7;
+          grid-column-end: 13;
+          grid-row-start: 7;
+          grid-row-end: 13;
+        }
+      }
+      .copyright{
+        margin-top: 7px;
+        float: right;
+        a{
+          font-size: 11px;
+          color: #aea7a1;
+        }
+      }
+    }
+    .olapic-loadmore{
+      margin-top: 55px;
+      text-align: center;
+      a{
+        color: white;
+        padding: 7px 40px;
+        background: #8c8179;
+        text-transform: uppercase;
+        font-size: 13px;
       }
     }
   }
