--- a/Nhom4_Kempinki/src/views/components/specialoffers/specialoffers/specialoffers.pug
+++ b/Nhom4_Kempinki/src/views/components/specialoffers/specialoffers/specialoffers.pug
@@ -143,3 +143,27 @@
                         p Turkey - Istanbul
                         p.description2 Book Early and save up to 20% on your luxury vacation or business trip! Plan your business or leisure trip early and take... 
                     .bg-white-milk
+                a(href="", class="new-special-offers-item full golf a-hide")
+                    img(src="../../../../assets/images/full1.jpg", alt="Çırağan Palace Kempinski Istanbul")
+                    .new-special-offers-item-info
+                        p.hotel-name Çırağan Palace Kempinski Istanbul
+                        h3 Early Booker
+                        p Turkey - Istanbul
+                        p.description2 Book Early and save up to 20% on your luxury vacation or business trip! Plan your business or leisure trip early and take... 
+                    .bg-white-milk
+                a(href="", class="new-special-offers-item half family a-hide")
+                    img(src="../../../../assets/images/half1.jpg", alt="Kempinski Hotel Berchtesgaden")
+                    .new-special-offers-item-info
+                        p.hotel-name Kempinski Hotel Berchtesgaden
+                        h3 Escape in Style this Summer
+                        p Germany - Berchtesgaden
+                    .bg-white-milk
+                a(href="", class="new-special-offers-item half family a-hide")
+                    img(src="../../../../assets/images/half1.jpg", alt="Kempinski Hotel Berchtesgaden")
+                    .new-special-offers-item-info
+                        p.hotel-name Kempinski Hotel Berchtesgaden
+                        h3 Escape in Style this Summer
+                        p Germany - Berchtesgaden
+                    .bg-white-milk
+            .imgloading.text-center 
+                img(src="../../../../assets/images/loader.gif", alt="") 
