--- a/renovation/src/views/components/home/home.pug
+++ b/renovation/src/views/components/home/home.pug
@@ -36,7 +36,7 @@
                 .title_ OUR SERVICES
                 .slogan_ YEARS OF EXPERIENCE
             .row.grid_services_area
-                .col-lg-4.col-sm-4.col-12
+                .col-lg-4.col-sm-4.col-xs-12
                     .services_item
                         .services_img
                             img.img-fluid(src='../../../assets/images/construction-icon.png' alt='service image')
@@ -44,7 +44,7 @@
                             h2 Contruction
                         .services_text
                             p Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.
-                .col-lg-4.col-sm-4.col-12
+                .col-lg-4.col-sm-4.col-xs-12
                     .services_item
                         .services_img
                             img.img-fluid(src='../../../assets/images/roofing-icon.png' alt='service image')
@@ -53,7 +53,7 @@
                         .services_text
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
                         
-                .col-lg-4.col-sm-4.col-12
+                .col-lg-4.col-sm-4.col-xs-12
                     .services_item
                         .services_img
                             img.img-fluid(src='../../../assets/images/remodeling-icon.png' alt='service image')
@@ -70,7 +70,7 @@
                 .slogan_.slogan__feature We take pride in our work
             .wrap_portfolio_item
                 .row.grid_portfolio_area
-                    .col-lg-4.col-sm-6.col-12
+                    .col-lg-4.col-sm-6.col-xs-12
                         .portfolio_item
                             a.lightbox(href='../../../assets/images/Smith-residence.jpg')(data-lightbox="example-set")
                             .portfolio_img
@@ -80,7 +80,7 @@
                                 a
                                     h4 Smith Residence
                                     .view View Project
-                    .col-lg-4.col-sm-6.col-12
+                    .col-lg-4.col-sm-6.col-xs-12
                         .portfolio_item
                             a.lightbox(href='../../../assets/images/portfolio-4.jpg')(data-lightbox="example-set")
                             .portfolio_img
@@ -90,7 +90,7 @@
                                 a
                                     h4 Smith Residence
                                     .view View Project
-                    .col-lg-4.col-sm-6.col-12
+                    .col-lg-4.col-sm-6.col-xs-12
                         .portfolio_item
                             a.lightbox(href='../../../assets/images/portfolio-7.jpg')(data-lightbox="example-set")
                             .portfolio_img
