--- a/renovation/src/views/components/portfolio/portfolio.pug
+++ b/renovation/src/views/components/portfolio/portfolio.pug
@@ -5,7 +5,7 @@
           br
           .content WE ARE A TEAM OF HIGHLY SKILLED PROFESSIONALS
 section.portfolio_area
-  .container-fluid
+  .container
     .portfolio_filter
       ul.list_style
         li.active(data-filter='*')
@@ -19,7 +19,7 @@ section.portfolio_area
         li(data-filter='.residential')
           a Residential
     .row.grid_portfolio_area
-      .col-lg-4.col-sm-6.col-12.commercial.landscaping
+      .col-lg-4.col-sm-6.col-xs-12.commercial.landscaping
         .portfolio_item
           a.lightbox(href='../../../assets/images/Smith-residence.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -29,7 +29,7 @@ section.portfolio_area
             a(href='')
               h4 Smith Residence
               .view View Project
-      .col-lg-4.col-sm-6.col-12.landscaping.residential
+      .col-lg-4.col-sm-6.col-xs-12.landscaping.residential
         .portfolio_item
           a.lightbox(href='../../../assets/images/portfolio-4.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -39,7 +39,7 @@ section.portfolio_area
             a(href='')
               h4 Smith Residence
               .view View Project
-      .col-lg-4.col-sm-6.col-12.commercial.residential
+      .col-lg-4.col-sm-6.col-xs-12.commercial.residential
         .portfolio_item
           a.lightbox(href='../../../assets/images/portfolio-7.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -49,7 +49,7 @@ section.portfolio_area
             a(href='')
               h4 Smith Residence
               .view View Project
-      .col-lg-4.col-sm-6.col-12.commercial.residential
+      .col-lg-4.col-sm-6.col-xs-12.commercial.residential
         .portfolio_item
           a.lightbox(href='../../../assets/images/portfolio-4.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -59,7 +59,7 @@ section.portfolio_area
             a(href='')
               h4 Outdoor Pergola
               .view View Project
-      .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
+      .col-lg-4.col-sm-6.col-xs-12.landscaping.newconstruction
         .portfolio_item
           a.lightbox(href='../../../assets/images/portoflio-5.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -69,7 +69,7 @@ section.portfolio_area
             a(href='')
               h4 Smith Residence
               .view View Project
-      .col-lg-4.col-sm-6.col-12.newconstruction.residential
+      .col-lg-4.col-sm-6.col-xs-12.newconstruction.residential
         .portfolio_item
           a.lightbox(href='../../../assets/images/Brown-Residence.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -79,7 +79,7 @@ section.portfolio_area
             a(href='')
               h4 Smith Residence
               .view View Project
-      .col-lg-4.col-sm-6.col-12.landscaping
+      .col-lg-4.col-sm-6.col-xs-12.landscaping
         .portfolio_item
           a.lightbox(href='../../../assets/images/Brown-Residence.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -89,7 +89,7 @@ section.portfolio_area
             a(href='')
               h4 Outdoor Pergola
               .view View Project
-      .col-lg-4.col-sm-6.col-12.newconstruction
+      .col-lg-4.col-sm-6.col-xs-12.newconstruction
         .portfolio_item
           a.lightbox(href='../../../assets/images/Smith-residence.jpg')(data-lightbox="example-set")
           .portfolio_img
@@ -99,7 +99,7 @@ section.portfolio_area
             a(href='')
               h4 Smith Residence
               .view View Project
-      .col-lg-4.col-sm-6.col-12.residential
+      .col-lg-4.col-sm-6.col-xs-12.residential
         .portfolio_item
           a.lightbox(href='../../../assets/images/landscaping-1.jpg')(data-lightbox="example-set")
           .portfolio_img
