--- a/renovation/src/views/components/home/home.scss
+++ b/renovation/src/views/components/home/home.scss
@@ -1,265 +1,265 @@
-
 @keyframes myAnimation {
-  from {bottom: 10%;visibility: hidden;}
-  to {bottom: 20%;visibility: visible;}
+    from {
+        bottom: 10%;
+        visibility: hidden;
+    }
+    to {
+        bottom: 20%;
+        visibility: visible;
+    }
+}
+
+.session_featured_work {
+    .container {
+        max-width: 1170px;
+        margin: 0 auto;
+        padding: 72px 15px;
+        width: 100%;
+    }
 }
 
 .fade {
-  .slick-slide.slick-active{
-    .wrap_des{
-
-      animation: myAnimation .5s ease-out forwards;
-      animation-delay: 1s;
+    .slick-slide.slick-active {
+        .wrap_des {
+            animation: myAnimation .5s ease-out forwards;
+            animation-delay: 1s;
+        }
     }
-  }
-  .slider_fade {
-    .slider_img {
-      max-height: 750px;
-      position: relative;
-      padding-top: 44%;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
+    .slider_fade {
+        .slider_img {
+            max-height: 750px;
+            position: relative;
+            padding-top: 44%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        }
+        .wrap_des {
+            position: absolute;
+            bottom: 10%;
+            left: 10%;
+            visibility: hidden;
+            .wrap_slogan_slider {
+                background-color: rgba(255, 255, 255, 0.88);
+                padding: 10px 11px;
+                width: 160px;
+                position: relative;
+                @include min-xs {
+                    width: 334px;
+                    padding: 20px 23px
+                }
+                @include min-md {
+                    width: 550px;
+                    padding: 33px 37px;
+                }
+                .slogan_slider {
+                    line-height: 12px;
+                    letter-spacing: 0px;
+                    font-weight: 300;
+                    font-size: 11px;
+                    white-space: pre-wrap;
+                    letter-spacing: 0;
+                    color: rgb(42, 42, 61);
+                    @include min-xs {
+                        line-height: 25px;
+                        font-size: 23px;
+                    }
+                    @include min-md {
+                        line-height: 41px;
+                        font-size: 36px;
+                    }
+                }
+            }
+            .wrap_link {
+                width: 60px;
+                position: absolute;
+                bottom: -8px;
+                left: 4px;
+                @include min-xs {
+                    bottom: -14px;
+                    left: 10px;
+                }
+                @include min-md {
+                    bottom: -18px;
+                    left: 15px;
+                }
+                .link_content a {
+                    background-color: #2a2b3d;
+                    padding: 4px 8px;
+                    letter-spacing: 0px;
+                    white-space: nowrap;
+                    font-size: 5px;
+                    line-height: 5px;
+                    font-weight: 300;
+                    color: rgb(255, 255, 255);
+                    cursor: pointer;
+                    &::after {
+                        content: '\f30b';
+                        font-family: 'Fontawesome';
+                        margin-left: 4px;
+                    }
+                    @include min-xs {
+                        padding: 9px 16px;
+                        font-size: 9px;
+                        line-height: 9px;
+                    }
+                    @include min-md {
+                        padding: 15px 26px;
+                        font-size: 16px;
+                        line-height: 16px;
+                    }
+                }
+            }
+        }
+    }
+    &:hover .slick-prev {
+        opacity: 1;
+    }
+    &:hover .slick-next {
+        opacity: 1;
+    }
+    .slick-next {
+        right: 0;
+    }
+    .slick-prev {
         left: 0;
-      }
     }
-    .wrap_des{
-      position: absolute;
-      bottom: 10%;
-      left: 10%;
-      visibility: hidden;
-
-      .wrap_slogan_slider{
-        background-color: rgba(255, 255, 255, 0.88);
-        padding: 10px 11px;
-        width: 160px;  
-        position: relative;
-        
-        @include min-xs {
-          width: 334px;
-          padding: 20px 23px
-        }
-        @include min-md {
-          width: 550px;
-          padding: 33px 37px;
-        }
-
-        .slogan_slider{
-          line-height: 12px;
-          letter-spacing: 0px;
-          font-weight: 300;
-          font-size: 11px;
-          white-space: pre-wrap;
-          letter-spacing: 0;
-          color: rgb(42, 42, 61);
-
-          @include min-xs {
-            line-height: 25px;
-            font-size: 23px;
-          }
-          @include min-md {
-            line-height: 41px;
-            font-size: 36px;
-          }
-        }
-      }
-      .wrap_link{
-        width: 60px;
-        position: absolute;
-        bottom: -8px;
-        left: 4px;
-        @include min-xs {
-          bottom: -14px;
-          left: 10px;
-        }
-        @include min-md {
-          bottom: -18px;
-          left: 15px;
-        }
-
-        .link_content a{
-          background-color: #2a2b3d;
-          padding: 4px 8px;
-          letter-spacing: 0px;
-          white-space: nowrap;
-          font-size: 5px;
-          line-height: 5px;
-          font-weight: 300;
-          color: rgb(255, 255, 255);
-          cursor: pointer;
-
-          &::after{
-            content: '\f30b';
-            font-family: 'Fontawesome';
-            margin-left: 4px;
-          }
-
-          @include min-xs {
-            padding: 9px 16px;
-            font-size: 9px;
-            line-height: 9px;
-          }
-          @include min-md {
-            padding: 15px 26px;
-            font-size: 16px;
-            line-height: 16px;
-          }
-        }
-      }
-    }
-  }
-  &:hover .slick-prev{
-    opacity: 1;
-  }
-  &:hover .slick-next{
-    opacity: 1;
-  }
-  .slick-next {
-    right: 0;
-  }
-  .slick-prev {
-    left: 0;
-  }
-  .slick-prev,
-  .slick-next {
-    z-index: 100;
-    background: rgba(0, 0, 0, 0.5);
-    width: 40px;
-    height: 40px;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-    &:hover{
-      background: #000;
-    }
-  }
-  .slick-next:before {
-    content: "\2192";
-  }
-  .slick-prev:before {
-    content: "\2190";
-  }
-  .slick-prev:before,
-  .slick-next:before {
-    font-size: 20px;
-    color: white;
-    opacity: 0.75;
-  }
-  .slick-dots{
-    z-index: 100;
-    bottom: 30px;
-  }
-  .slick-dots li{
-    height: 13px;
-    width: 13px;
-  }
-  .slick-dots li.slick-active button:before {
-    background: #fff;
-  }
-  .slick-dots li button:before{
-    content: "";
-    box-sizing: content-box;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0);
-    transition: opacity 0.5s ease;
-    width: 13px;
-    height: 13px;
-    border: 2px solid #fff;
-  }
-  .slick-dots li:hover button:before{
-    background: #fff;
-
-  }
-}
-
-.block_title_{
-  text-align: center;
-  width: 100%;
-  font-weight: $fontweight-light;
-  text-transform: uppercase;
-  padding-bottom: 20px;
-
-  .title_{
-    font-size: 30px;
-    line-height: 1;
-    letter-spacing: 0.7px;
-    color: #3f3f3f;
-    padding: 8px 0;
-
-    @include min-md {
-      font-size: 36px;
-    }
-  }
-  .slogan_{
-    color: rgba(2,2,2,0.46);
-    font-size: 16px;
-    letter-spacing: 4px;
-    padding: 8px 0;
-
-    @include min-md {
-      font-size: 18px;
-      letter-spacing: 7px;
-    }
-
-  }
-}
-  
-.sesion_our_service{
-  margin-bottom: 30px;
-  .wrap_service{
-    border-top: 1px solid #e5e5e5;
-    border-bottom: 1px solid #e5e5e5;
-    
-  }
-}
-.session_featured_work{
-  .wrap_featured{
-    background-color: #2e2f42;
-
-    .title__feature{
-      color: #fff;
-    }
-    .slogan__feature{
-      color: rgba(255,255,255,0.46);
-    }
-    .wrap_portfolio_item{
-      display: block;
-    }
-    .btn_view_portfolio{
-      margin-top: 60px;
-      text-align: center;
-      span{
-        padding: 15px 25px;
-        font-weight: 400;
-        line-height: 1.3em;
-        color: #393939;
-        background-color: #f6c427;
-        letter-spacing: 0;
-        font-family: fonts(pTSansNarrow);
-        font-size: 17px;
-        text-align: center;
+    .slick-prev,
+    .slick-next {
         z-index: 100;
-
-        &::after{
-          font-family: "Fontawesome";
-          content: "\f03e";
-          padding-left: 10px;
-          font-size: 17px;
-          color: $text-color-black;
-        }
+        background: rgba(0, 0, 0, 0.5);
+        width: 40px;
+        height: 40px;
+        opacity: 0;
+        transition: opacity 0.5s ease;
         &:hover {
-          background-color: #ffd957;
+            background: #000;
         }
-      }
-      
     }
-  }
+    .slick-next:before {
+        content: "\2192";
+    }
+    .slick-prev:before {
+        content: "\2190";
+    }
+    .slick-prev:before,
+    .slick-next:before {
+        font-size: 20px;
+        color: white;
+        opacity: 0.75;
+    }
+    .slick-dots {
+        z-index: 100;
+        bottom: 30px;
+    }
+    .slick-dots li {
+        height: 13px;
+        width: 13px;
+    }
+    .slick-dots li.slick-active button:before {
+        background: #fff;
+    }
+    .slick-dots li button:before {
+        content: "";
+        box-sizing: content-box;
+        border-radius: 50%;
+        background-color: rgba(0, 0, 0, 0);
+        transition: opacity 0.5s ease;
+        width: 13px;
+        height: 13px;
+        border: 2px solid #fff;
+    }
+    .slick-dots li:hover button:before {
+        background: #fff;
+    }
 }
-.session_testionials{
-  background-color: #f1f1f1;
-  .wrap_testionials{
-    padding-top: 60px;
-  }
+
+.block_title_ {
+    text-align: center;
+    width: 100%;
+    font-weight: $fontweight-light;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    .title_ {
+        font-size: 30px;
+        line-height: 1;
+        letter-spacing: 0.7px;
+        color: #3f3f3f;
+        padding: 8px 0;
+        @include min-md {
+            font-size: 36px;
+        }
+    }
+    .slogan_ {
+        color: rgba(2, 2, 2, 0.46);
+        font-size: 16px;
+        letter-spacing: 4px;
+        padding: 8px 0;
+        @include min-md {
+            font-size: 18px;
+            letter-spacing: 7px;
+        }
+    }
+}
+
+.sesion_our_service {
+    margin-bottom: 30px;
+    .wrap_service {
+        border-top: 1px solid #e5e5e5;
+        border-bottom: 1px solid #e5e5e5;
+    }
+}
+
+.session_featured_work {
+    .wrap_featured {
+        background-color: #2e2f42;
+        .title__feature {
+            color: #fff;
+        }
+        .slogan__feature {
+            color: rgba(255, 255, 255, 0.46);
+        }
+        .wrap_portfolio_item {
+            display: block;
+            margin: 0 8px;
+        }
+        .btn_view_portfolio {
+            margin-top: 60px;
+            text-align: center;
+            span {
+                padding: 15px 25px;
+                font-weight: 400;
+                line-height: 1.3em;
+                color: #393939;
+                background-color: #f6c427;
+                letter-spacing: 0;
+                font-family: fonts(pTSansNarrow);
+                font-size: 17px;
+                text-align: center;
+                z-index: 100;
+                &::after {
+                    font-family: "Fontawesome";
+                    content: "\f03e";
+                    padding-left: 10px;
+                    font-size: 17px;
+                    color: $text-color-black;
+                }
+                &:hover {
+                    background-color: #ffd957;
+                }
+            }
+        }
+    }
+}
+
+.session_testionials {
+    background-color: #f1f1f1;
+    .wrap_testionials {
+        padding-top: 60px;
+    }
 }
