--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -24,3 +24,4 @@
 @import '../../views/components/homepage/gallery/gallery';
 @import '../../views/components/homepage/specialoffers/specialoffers';
 @import '../../views/components/specialoffers/specialoffers/specialoffers';
+@import '../../views/components/aboutus/aboutus/aboutus';
