update responsive the work page

--- a/adaptis-master/src/views/components/thework/thework.pug
+++ b/adaptis-master/src/views/components/thework/thework.pug
@@ -30,7 +30,7 @@ section.a-thework
             p.nationalBrand 
               span Vicostone
               span Quartz
-            p.content-item-box A global luxury hotel group located in Geneva
+            p.content-item-box Engineered quartz stone, manufactured and based in Vietnam
           .overlay
       .col-xs-6.col-sm-6.col-md-4.col-item
         a.link-item.snake(href="#")
