--- a/Nhom4_Kempinki/src/views/index.pug
+++ b/Nhom4_Kempinki/src/views/index.pug
@@ -9,6 +9,6 @@ block content
         //- include components/homepage/introducePage/introduce.pug
         //- include components/homepage/mapbox/mapbox.pug
         //- include components/homepage/experiences/experiences.pug
-        include components/homepage/gallery/gallery.pug
+        //- include components/homepage/gallery/gallery.pug
         //- include components/homepage/specialoffers/specialoffers.pug
         include components/homepage/explore/explore.pug 
